--- a/task.ipynb
+++ b/task.ipynb
@@ -128,16 +128,24 @@
     "### Данную задачу можно свести к задаче определения объема выборки, при заданном доверительном интервале и ошибке.\n",
     "### Так как кол-во выпадения орла на 10% больше выпадения решки, получим : $$p_p + p_p*0.1 = 1 - p_p, $$ где, $p_p$ - кол-во выпадений решки.\n",
     "### Таким образом, вероятность выпадения решки:$$p_p * 1.1 +p_p. $$ Следовательно: $$p_p =\\frac{10}{21}$$\n",
-    "### Далее. Мы знаем формулу для определения обьема выборки: $$n = (\\frac{Z*\\sqrt{p*(1-p)}}{e})^2,$$ где \n",
-    "### Z - величина, определяемая исходя из выбранного доверительного интервала; \n",
-    "### e - допустимая ошибка выборочного исследования; \n",
-    "### p - истинная доля успехов.\n",
-    "### Возьмем доверительный интервал, равный 95%, тогда величина Z будет равна = 1.96; ошибку (е) примем равной 5% => e = 0.05/\n",
+    "### Далее. Мы знаем формулу для определения обьема выборки: $$n = (\\frac{Z*\\sqrt{p*(1-p)}}{e})^2,$$\n",
+    "### где \n",
+    "### $Z$ - величина, определяемая исходя из выбранного доверительного интервала; \n",
+    "### $e$ - допустимая ошибка выборочного исследования; \n",
+    "### $p$ - истинная доля успехов.\n",
+    "### Возьмем доверительный интервал, равный 95%, тогда величина $Z$ будет равна = $1.96$; ошибку $(е)$ примем равной $5%$, значит $e = 0.05$.\n",
     "### Подставим значения в формулу:$$n = (\\frac{1.96*\\sqrt{\\frac{10}{21}*(1-\\frac{10}{21})}}{0.05})^2$$ $$n\\approx 384$$\n",
     "### Ответ: при $n \\approx 384$ мы можем сказать, что монета «нечестная»."
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
