--- a/task.ipynb
+++ b/task.ipynb
@@ -128,13 +128,13 @@
     "### Данную задачу можно свести к задаче определения объема выборки, при заданном доверительном интервале и ошибке.\n",
     "### Так как кол-во выпадения орла на 10% больше выпадения решки, получим :<br> $$p_p + p_p*0.1 = 1 - p_p$$ <br>где, $p_p$ - кол-во выпадений решки.\n",
     "### Таким образом, вероятность выпадения решки:<br>$$p_o = p_p * 1.1 +p_p. $$<br> Следовательно:<br> $$p_p =\\frac{10}{21}$$<br>\n",
-    "### Далее. Мы знаем формулу для определения обьема выборки: $$n = (\\frac{Z*\\sqrt{p*(1-p)}}{e})^2,$$\n",
+    "### Далее. Мы знаем формулу для определения обьема выборки:<br> $$n = (\\frac{Z*\\sqrt{p*(1-p)}}{e})^2,$$<br>\n",
     "### где \n",
     "### $Z$ - величина, определяемая исходя из выбранного доверительного интервала; \n",
     "### $e$ - допустимая ошибка выборочного исследования; \n",
     "### $p$ - истинная доля успехов.\n",
     "### Пусть надежность = $95$%, тогда величина $Z$ будет равна = $1,96$; ошибку примем равной $5$%, значит $e = 0.05$.\n",
-    "### Подставим значения в формулу:$$n = (\\frac{1.96*\\sqrt{\\frac{10}{21}*(1-\\frac{10}{21})}}{0.05})^2$$ $$n\\approx 384$$\n",
+    "### Подставим значения в формулу:<br>$$n = (\\frac{1.96*\\sqrt{\\frac{10}{21}*(1-\\frac{10}{21})}}{0.05})^2$$ <br> $$n\\approx 384$$\n",
     "### Ответ: После проведения $384$ испытаний (с 5% погрешностью и 95% доверительной надежностью) мы сможем сказать, что монета «нечестная»."
    ],
    "cell_type": "markdown",
