--- a/task.ipynb
+++ b/task.ipynb
@@ -128,8 +128,7 @@
     "### Данную задачу можно свести к задаче определения объема выборки, при заданном доверительном интервале и ошибке.\n",
     "### Так как кол-во выпадения орла на 10% больше выпадения решки, получим :<br> $$p_p + p_p*0.1 = 1 - p_p$$ <br>где, $p_p$ - кол-во выпадений решки.\n",
     "### Таким образом, вероятность выпадения решки:<br>$$p_o = p_p * 1.1 +p_p. $$<br> Следовательно:<br> $$p_p =\\frac{10}{21}$$<br>\n",
-    "### Далее. Мы знаем формулу для определения обьема выборки:<br> $$n = (\\frac{Z*\\sqrt{p*(1-p)}}{e})^2,$$<br>\n",
-    "### где \n",
+    "### Далее. Мы знаем формулу для определения обьема выборки:<br> $$n = (\\frac{Z*\\sqrt{p*(1-p)}}{e})^2,$$<br>где \n",
     "### $Z$ - величина, определяемая исходя из выбранного доверительного интервала; \n",
     "### $e$ - допустимая ошибка выборочного исследования; \n",
     "### $p$ - истинная доля успехов.\n",
