--- a/task.ipynb
+++ b/task.ipynb
@@ -28,8 +28,8 @@
  "cells": [
   {
    "source": [
-    "# 1. Написать функцию на Python\n",
-    "### Напиши функцию, которая удалит дубликаты в списке. Список не отсортирован. Необходимо сохранить порядок сортировки оригинального списка."
+    "# <b>1. Написать функцию на Python</b>\n",
+    "### <b>Напиши функцию, которая удалит дубликаты в списке. Список не отсортирован. Необходимо сохранить порядок сортировки оригинального списка.</b>"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -82,13 +82,7 @@
   },
   {
    "source": [
-    "### Какая асимптотическая сложность у этой функций?"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
+    "### <b>Какая асимптотическая сложность у этой функций?</b>\n",
     "### Ответ: O(n)"
    ],
    "cell_type": "markdown",
@@ -96,8 +90,8 @@
   },
   {
    "source": [
-    "# 2. Написать SQL запрос\n",
-    "### Напиши запрос, выводящий все отделы, в которых меньше 5 разработчиков (position = 'Software Developer')."
+    "# <b>2. Написать SQL запрос</b>\n",
+    "### <b>Напиши запрос, выводящий все отделы, в которых меньше 5 разработчиков (position = 'Software Developer').</b>"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -110,16 +104,16 @@
    "source": [
     "'''\n",
     "SELECT department FROM employees\n",
-    "where position = 'Software Developer'\n",
+    "WHERE position = 'Software Developer'\n",
     "GROUP by department\n",
-    "having COUNT(*) < 5;\n",
+    "HAVING COUNT(*) < 5;\n",
     "'''"
    ]
   },
   {
    "source": [
-    "# 3. Решить задачу\n",
-    "### Подкинули монету N раз. Кол-во случаев, когда выпал орёл, на 10% больше, чем кол-во случаев, когда выпала решка. При каком N мы можем сказать, что монета «нечестная» (орёл и решка выпадают с разной вероятностью)?"
+    "# <b>3. Решить задачу</b>\n",
+    "### <b>Подкинули монету N раз. Кол-во случаев, когда выпал орёл, на 10% больше, чем кол-во случаев, когда выпала решка. При каком N мы можем сказать, что монета «нечестная» (орёл и решка выпадают с разной вероятностью)?</b>"
    ],
    "cell_type": "markdown",
    "metadata": {}
