--- a/task.ipynb
+++ b/task.ipynb
@@ -43,20 +43,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def duplicates(lst):\n",
     "    #Функция, возвращающая список, без дубликатов\n",
-    "    result = [i for n, i in enumerate(lst) if i not in lst[:n]]\n",
-    "    return result\n",
+    "    return [i for n, i in enumerate(lst) if i not in lst[:n]]\n",
     "\n",
     "from random import randint\n",
     "def test_list(start, stop, length):\n",
     "    # Функция для тестирования\n",
-    "    test = [randint(start, stop) for i in range(length)]\n",
-    "    return test"
+    "    return [randint(start, stop) for i in range(length)]"
    ]
   },
   {
@@ -68,14 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Сгенерированный список с дубликатами: [4, 1, 2, 3, 2, 5, 2, 4, 3, 1] \n\nСписок без дубликатов: [4, 1, 2, 3, 5]\n"
+      "Сгенерированный список с дубликатами: [2, 4, 3, 1, 4, 4, 2, 5, 3, 5] \n\nСписок без дубликатов: [2, 4, 3, 1, 5]\n"
      ]
     }
    ],
