--- a/task.ipynb
+++ b/task.ipynb
@@ -115,10 +115,9 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "SELECT department FROM employees\n",
-    "WHERE position = 'Software Developer'\n",
-    "GROUP by department\n",
-    "HAVING COUNT(*) < 5;\n",
+    "SELECT department FROM employees \n",
+    "GROUP BY department \n",
+    "HAVING sum(position='engineer') < 5;\n",
     "'''"
    ]
   },
